[gd_scene load_steps=104 format=2]

[ext_resource path="res://GameElmnts/WaterBody1.gd" type="Script" id=1]
[ext_resource path="res://GameElmnts/FoxyGDTiles.tres" type="TileSet" id=2]
[ext_resource path="res://GameElmnts/clouds.gd" type="Script" id=3]
[ext_resource path="res://Sounds/plouf.wav" type="AudioStream" id=4]
[ext_resource path="res://img/seeWaves.png" type="Texture" id=5]
[ext_resource path="res://img/Backgrounds/Clouds.png" type="Texture" id=6]
[ext_resource path="res://GameElmnts/Level.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameElmnts/Foxy.tscn" type="PackedScene" id=8]
[ext_resource path="res://img/Poof.png" type="Texture" id=9]
[ext_resource path="res://GameElmnts/teleports/TeleporterWide.tscn" type="PackedScene" id=10]
[ext_resource path="res://img/Mermaidz.png" type="Texture" id=11]
[ext_resource path="res://img/Clam.png" type="Texture" id=12]
[ext_resource path="res://Levels/SunBeach2.gd" type="Script" id=13]
[ext_resource path="res://Levels/ClamArea.gd" type="Script" id=14]
[ext_resource path="res://GameElmnts/Talking_area.gd" type="Script" id=15]
[ext_resource path="res://img/Items/items.png" type="Texture" id=16]
[ext_resource path="res://Levels/Barmaid.gd" type="Script" id=17]
[ext_resource path="res://Sounds/item get old.wav" type="AudioStream" id=18]
[ext_resource path="res://Sounds/mermaid.wav" type="AudioStream" id=19]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 90, 44.8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 0, 40, 32, 40 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 32, 40, 32, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 64, 40, 32, 40 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 96, 40, 32, 40 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 0, 80, 32, 40 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "splash",
"speed": 9.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 64, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 64, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 64, 16 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "wave",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 11 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 11 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 11 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 11 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 11 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 11 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 11 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 11 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 11 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 11 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 11 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 11 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Barmaid",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 16 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 16 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 16 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 16 )
region = Rect2( 16, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 16 )
region = Rect2( 0, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 16 )
region = Rect2( 16, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 16 )
region = Rect2( 32, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 16 )
region = Rect2( 16, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 16 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 16 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 16 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 16 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 16 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 16 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 16 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 16 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 16 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 16 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 16 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 16 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 16 )
region = Rect2( 0, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 16 )
region = Rect2( 16, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 16 )
region = Rect2( 32, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 16 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 16 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=70]
animations = [ {
"frames": [ SubResource( 45 ) ],
"loop": true,
"name": "Box",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "BrokenHourglass",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ) ],
"loop": true,
"name": "Check",
"speed": 5.0
}, {
"frames": [ SubResource( 65 ) ],
"loop": true,
"name": "CheckBox",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 48 ), SubResource( 67 ) ],
"loop": true,
"name": "Cheer",
"speed": 4.0
}, {
"frames": [ SubResource( 49 ) ],
"loop": true,
"name": "Cocktail",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ) ],
"loop": true,
"name": "Excl",
"speed": 5.0
}, {
"frames": [ SubResource( 51 ) ],
"loop": true,
"name": "Guitare",
"speed": 5.0
}, {
"frames": [ SubResource( 52 ) ],
"loop": true,
"name": "Hot",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ) ],
"loop": true,
"name": "Hourglass",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ) ],
"loop": true,
"name": "Ice",
"speed": 5.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "Igloo",
"speed": 3.0
}, {
"frames": [ SubResource( 57 ) ],
"loop": true,
"name": "NoMusic",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ) ],
"loop": true,
"name": "Question",
"speed": 5.0
}, {
"frames": [ SubResource( 59 ) ],
"loop": true,
"name": "Sand",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ) ],
"loop": true,
"name": "Shovel",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 32 ) ],
"loop": true,
"name": "Speachless",
"speed": 3.0
}, {
"frames": [ SubResource( 63 ) ],
"loop": true,
"name": "String",
"speed": 5.0
}, {
"frames": [ SubResource( 64 ) ],
"loop": true,
"name": "Talk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 16 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 16 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 16 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 16 )
region = Rect2( 16, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 16 )
region = Rect2( 0, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 16 )
region = Rect2( 16, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 16 )
region = Rect2( 32, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 16 )
region = Rect2( 16, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 16 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 16 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 16 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 16 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 16 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 16 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 16 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 16 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 16 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 16 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 16 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 16 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 16 )
region = Rect2( 0, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 16 )
region = Rect2( 16, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 16 )
region = Rect2( 32, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 16 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 16 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=97]
animations = [ {
"frames": [ SubResource( 71 ) ],
"loop": true,
"name": "Box",
"speed": 5.0
}, {
"frames": [ SubResource( 72 ) ],
"loop": true,
"name": "BrokenHourglass",
"speed": 5.0
}, {
"frames": [ SubResource( 73 ) ],
"loop": true,
"name": "Check",
"speed": 5.0
}, {
"frames": [ SubResource( 74 ) ],
"loop": true,
"name": "CheckBox",
"speed": 5.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 75 ), SubResource( 77 ) ],
"loop": true,
"name": "Cheer",
"speed": 4.0
}, {
"frames": [ SubResource( 79 ) ],
"loop": true,
"name": "Cocktail",
"speed": 5.0
}, {
"frames": [ SubResource( 80 ) ],
"loop": true,
"name": "Excl",
"speed": 5.0
}, {
"frames": [ SubResource( 81 ) ],
"loop": true,
"name": "Guitare",
"speed": 5.0
}, {
"frames": [ SubResource( 82 ) ],
"loop": true,
"name": "Hot",
"speed": 5.0
}, {
"frames": [ SubResource( 83 ) ],
"loop": true,
"name": "Hourglass",
"speed": 5.0
}, {
"frames": [ SubResource( 84 ) ],
"loop": true,
"name": "Ice",
"speed": 5.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ) ],
"loop": true,
"name": "Igloo",
"speed": 3.0
}, {
"frames": [ SubResource( 87 ) ],
"loop": true,
"name": "NoMusic",
"speed": 5.0
}, {
"frames": [ SubResource( 88 ) ],
"loop": true,
"name": "Question",
"speed": 5.0
}, {
"frames": [ SubResource( 89 ) ],
"loop": true,
"name": "Sand",
"speed": 5.0
}, {
"frames": [ SubResource( 96 ) ],
"loop": true,
"name": "Shovel",
"speed": 5.0
}, {
"frames": [ SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 90 ) ],
"loop": true,
"name": "Speachless",
"speed": 3.0
}, {
"frames": [ SubResource( 94 ) ],
"loop": true,
"name": "String",
"speed": 5.0
}, {
"frames": [ SubResource( 95 ) ],
"loop": true,
"name": "Talk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 10.6, 3.69999 )

[sub_resource type="RectangleShape2D" id=98]
extents = Vector2( 11.5, 3.50001 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 30.4, 10.9 )

[node name="Node2D" type="Node2D"]
scale = Vector2( 5, 5 )
script = ExtResource( 13 )

[node name="Level" parent="." instance=ExtResource( 7 )]
size_x = 1920
size_y = 1360
music = "SunBeach"

[node name="TileMap" type="TileMap" parent="Level"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -262145, 5, 0, -327656, 63, 0, -196609, 5, 0, -262120, 63, 0, -131073, 5, 0, -196584, 63, 0, -65537, 5, 0, -131048, 63, 0, -1, 5, 0, -65512, 63, 0, 65535, 5, 0, 24, 63, 0, 131071, 5, 0, 65560, 63, 0, 196607, 5, 0, 131096, 63, 0, 262143, 5, 0, 196632, 63, 0, 327679, 5, 0, 262168, 63, 0, 393215, 5, 0, 327704, 63, 0, 458751, 5, 0, 393240, 63, 0, 524287, 5, 0, 458776, 63, 0, 589823, 5, 0, 524312, 63, 0, 655359, 5, 0, 589848, 63, 0, 720895, 5, 0, 655384, 63, 0, 786431, 5, 0, 720907, 60, 0, 720908, 61, 0, 720909, 61, 0, 720910, 61, 0, 720911, 61, 0, 720912, 61, 0, 720913, 61, 0, 720914, 61, 0, 720915, 61, 0, 720916, 61, 0, 720917, 61, 0, 720918, 61, 0, 720919, 61, 0, 720920, 61, 0, 720921, 61, 0, 720922, 61, 0, 720923, 61, 0, 720924, 61, 0, 720925, 61, 0, 851967, 5, 0, 786443, 63, 0, 786444, 64, 0, 786445, 64, 0, 786446, 64, 0, 786447, 64, 0, 786448, 64, 0, 786449, 64, 0, 786450, 64, 0, 786451, 64, 0, 786452, 64, 0, 786453, 64, 0, 786454, 64, 0, 786455, 64, 0, 786456, 64, 0, 786457, 64, 0, 786458, 64, 0, 786459, 64, 0, 786460, 64, 0, 786461, 64, 0, 917503, 5, 0, 851979, 63, 0, 851980, 64, 0, 851981, 64, 0, 851982, 64, 0, 851983, 64, 0, 851984, 64, 0, 851985, 64, 0, 851986, 64, 0, 851987, 64, 0, 851988, 64, 0, 851989, 64, 0, 851990, 64, 0, 851991, 64, 0, 851992, 64, 0, 851993, 64, 0, 851994, 64, 0, 851995, 64, 0, 851996, 64, 0, 851997, 64, 0, 983039, 5, 0, 917515, 63, 0, 917516, 64, 0, 917517, 64, 0, 917518, 64, 0, 917519, 64, 0, 917520, 64, 0, 917521, 64, 0, 917522, 64, 0, 917523, 64, 0, 917524, 64, 0, 917525, 64, 0, 917526, 64, 0, 917527, 64, 0, 917528, 64, 0, 917529, 64, 0, 917530, 64, 0, 917531, 64, 0, 917532, 64, 0, 917533, 64, 0, 1048575, 5, 0, 983051, 63, 0, 983052, 64, 0, 983053, 64, 0, 983054, 64, 0, 983055, 64, 0, 983056, 64, 0, 983057, 64, 0, 983058, 64, 0, 983059, 64, 0, 983060, 64, 0, 983061, 64, 0, 983062, 64, 0, 983063, 64, 0, 983064, 64, 0, 983065, 64, 0, 983066, 64, 0, 983067, 64, 0, 983068, 64, 0, 983069, 64, 0, 1114111, 5, 0, 1048587, 63, 0, 1048588, 64, 0, 1048589, 64, 0, 1048590, 64, 0, 1048591, 64, 0, 1048592, 64, 0, 1048593, 64, 0, 1048594, 64, 0, 1048595, 64, 0, 1048596, 64, 0, 1048597, 64, 0, 1048598, 64, 0, 1048599, 64, 0, 1048600, 64, 0, 1048601, 64, 0, 1048602, 64, 0, 1048603, 64, 0, 1048604, 64, 0, 1048605, 64, 0, 1179647, 5, 0, 1114123, 63, 0, 1114124, 64, 0, 1114125, 64, 0, 1114126, 64, 0, 1114127, 64, 0, 1114128, 64, 0, 1114129, 64, 0, 1114130, 64, 0, 1114131, 64, 0, 1114132, 64, 0, 1114133, 64, 0, 1114134, 64, 0, 1114135, 64, 0, 1114136, 64, 0, 1114137, 64, 0, 1114138, 64, 0, 1114139, 64, 0, 1114140, 64, 0, 1114141, 64, 0 )

[node name="Foxy" parent="Level" instance=ExtResource( 8 )]
position = Vector2( 239.4, 169.8 )

[node name="WaterBody1" type="Area2D" parent="Level"]
position = Vector2( -0.600006, 238 )
z_index = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/WaterBody1"]
position = Vector2( 87.6, 0 )
shape = SubResource( 16 )

[node name="ColorRect" type="ColorRect" parent="Level/WaterBody1"]
light_mask = 16
margin_left = -2.39999
margin_top = -44.0
margin_right = 180.6
margin_bottom = 50.0
color = Color( 0.133333, 0.223529, 0.796078, 1 )

[node name="splash" type="AnimatedSprite" parent="Level/WaterBody1"]
position = Vector2( 211.2, -1.20006 )
z_index = 3
frames = SubResource( 17 )
animation = "splash"
frame = 4
playing = true

[node name="plouf" type="AudioStreamPlayer" parent="Level/WaterBody1"]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="animated sea" type="Node" parent="Level"]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Level/animated sea"]
position = Vector2( 232, 1015 )
scale = Vector2( 5, 5 )
frames = SubResource( 18 )
animation = "wave"
frame = 3
playing = true
offset = Vector2( 38, -17 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Level/animated sea"]
position = Vector2( -43, 860 )
scale = Vector2( 5, 5 )
frames = SubResource( 18 )
animation = "wave"
frame = 3
playing = true
offset = Vector2( 29, 14 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Level/animated sea"]
position = Vector2( 552, 1015 )
scale = Vector2( 5, 5 )
frames = SubResource( 18 )
animation = "wave"
frame = 3
playing = true
offset = Vector2( 38, -17 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="Level"]

[node name="clouds" type="ParallaxLayer" parent="Level/ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Level/ParallaxBackground/clouds"]
position = Vector2( 624.5, 583 )
texture = ExtResource( 6 )

[node name="PortalWide" parent="Level" instance=ExtResource( 10 )]
position = Vector2( 150.6, 283.4 )
to_scene = "res://Levels/SunBeach2.tscn"
to_x = 222
to_y = 125

[node name="PortalWide2" parent="Level" instance=ExtResource( 10 )]
position = Vector2( 100.4, 283.4 )
to_scene = "res://Levels/SunBeach2.tscn"
to_x = 222
to_y = 125

[node name="PortalWide3" parent="Level" instance=ExtResource( 10 )]
position = Vector2( 50.4, 283.4 )
to_scene = "res://Levels/SunBeach2.tscn"
to_x = 222
to_y = 125

[node name="PortalWide4" parent="Level" instance=ExtResource( 10 )]
position = Vector2( 0.200018, 283.4 )
to_scene = "res://Levels/SunBeach2.tscn"
to_x = 222
to_y = 125

[node name="chairs" type="Node" parent="Level"]

[node name="Long chair" type="Sprite" parent="Level/chairs"]
position = Vector2( 1067, 828 )
scale = Vector2( 5, 5 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 83, 139, 41, 21 )

[node name="Long chair2" type="Sprite" parent="Level/chairs"]
position = Vector2( 1308, 828 )
scale = Vector2( 5, 5 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 83, 139, 41, 21 )

[node name="Bar" type="Sprite" parent="Level"]
position = Vector2( 345.8, 152 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 127.976, 112, 64.3795, 48.1724 )

[node name="idleMermaid" type="AnimatedSprite" parent="Level"]
position = Vector2( 211.8, 153.2 )
frames = SubResource( 31 )
animation = "idle"
frame = 4
playing = true

[node name="Barmaid" type="AnimatedSprite" parent="Level"]
position = Vector2( 345.4, 157 )
z_index = -1
frames = SubResource( 31 )
animation = "Barmaid"
playing = true
flip_h = true
script = ExtResource( 17 )

[node name="item" type="AudioStreamPlayer2D" parent="Level/Barmaid"]
position = Vector2( -44.4, -96.6 )
stream = ExtResource( 18 )

[node name="mermaidSound" type="AudioStreamPlayer2D" parent="Level/Barmaid"]
stream = ExtResource( 19 )

[node name="Cocktail" type="AnimatedSprite" parent="Level/Barmaid"]
visible = false
position = Vector2( -19.6003, 0.799988 )
z_index = 1
frames = SubResource( 70 )
animation = "Cocktail"
playing = true

[node name="Cocktail2" type="AnimatedSprite" parent="Level/Barmaid"]
visible = false
position = Vector2( -138.6, 6.20001 )
z_index = 1
frames = SubResource( 70 )
animation = "Cocktail"
playing = true

[node name="bubble" type="AnimatedSprite" parent="Level/Barmaid"]
visible = false
position = Vector2( -24.3999, -11.6 )
z_index = 1
frames = SubResource( 70 )
animation = "Talk"
playing = true
flip_h = true

[node name="subject" type="AnimatedSprite" parent="Level/Barmaid"]
visible = false
position = Vector2( -26.4, -11.6 )
z_index = 1
frames = SubResource( 70 )
animation = "Hot"
playing = true

[node name="mark" type="AnimatedSprite" parent="Level/Barmaid"]
visible = false
position = Vector2( -17.1998, -13.6 )
z_index = 1
frames = SubResource( 70 )
animation = "Excl"
playing = true

[node name="joy" type="AnimatedSprite" parent="Level/Barmaid"]
visible = false
position = Vector2( -13.1999, -12.8001 )
z_index = 1
frames = SubResource( 70 )
animation = "Cheer"
frame = 2
playing = true

[node name="give" type="AnimatedSprite" parent="Level/Barmaid"]
visible = false
position = Vector2( -11, -1.99976 )
z_index = 1
frames = SubResource( 97 )
animation = "Sand"
playing = true
flip_h = true

[node name="Clam" type="KinematicBody2D" parent="Level"]
position = Vector2( -1.37985e-05, 0 )

[node name="ClamSpr" type="AnimatedSprite" parent="Level/Clam"]
position = Vector2( 15.6, 171.8 )
frames = SubResource( 34 )
animation = "idle"

[node name="ClamArea" type="Area2D" parent="Level/Clam/ClamSpr"]
script = ExtResource( 14 )

[node name="ClamInterract" type="CollisionShape2D" parent="Level/Clam/ClamSpr/ClamArea"]
position = Vector2( 0.399975, 6.29999 )
shape = SubResource( 35 )

[node name="ClamGround" type="CollisionShape2D" parent="Level/Clam"]
position = Vector2( 16.1, 179.5 )
shape = SubResource( 98 )

[node name="talking_area" type="Area2D" parent="Level"]
position = Vector2( 280, 150 )
script = ExtResource( 15 )
talkingNode = NodePath("../Barmaid")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/talking_area"]
position = Vector2( 30.4, 10.8 )
shape = SubResource( 36 )

[connection signal="body_entered" from="Level/WaterBody1" to="Level/WaterBody1" method="_on_WaterBody1_body_entered"]
[connection signal="body_entered" from="Level/Clam/ClamSpr/ClamArea" to="Level/Clam/ClamSpr/ClamArea" method="_on_ClamArea_body_entered"]
